[gd_scene load_steps=6 format=3 uid="uid://bise3w6g1boi0"]

[ext_resource type="Script" path="res://game/wanderers/wanderer.gd" id="1_6ltbo"]
[ext_resource type="AudioStream" uid="uid://1mc3unf6wl53" path="res://game/sounds/Swipe.ogg" id="2_pbyts"]

[sub_resource type="Animation" id="Animation_mpyr0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bxw71"]
resource_name = "bounce"
length = 0.125
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3qbd"]
_data = {
"RESET": SubResource("Animation_mpyr0"),
"bounce": SubResource("Animation_bxw71")
}

[node name="Wanderer" type="Node2D" groups=["MapEntities"]]
script = ExtResource("1_6ltbo")

[node name="Sprites" type="Node2D" parent="."]

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_j3qbd")
}

[node name="MoveCadence" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25

[node name="MoveSoundPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_pbyts")
volume_db = -6.0
pitch_scale = 2.0

[connection signal="timeout" from="MoveCadence" to="." method="_next_move"]
